--- a/templates/musicindex.html
+++ b/templates/musicindex.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music</title>
-    <link rel="stylesheet" href="musicstyles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/musicstyles.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/x-icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
 <body>
@@ -34,8 +35,8 @@
         </div>
         <div class="dropdown_menu">
             <li><a href="tripindex.html" data-value="Itineraries">Itineraries</a></li>
-            <li><a href="recipesindex.html" data-value="Cuisine">Cuisine</a></li>
-            <li><a href="templates\gymindex.html" data-value="Workout">Workout</a></li>
+            <li><a href="/templates/recipesindex.html" data-value="Cuisine">Cuisine</a></li>
+            <li><a href="/templates/gymindex.html" data-value="Workout">Workout</a></li>
             <li><a href="#hero" class="action_btn" data-value="Landing Page">Landing Page</a></li>
         </div>
 
@@ -43,45 +44,75 @@
     <div class="text-container">
         Music is Essential
     </div>
-    
+
     <footer>
         <audio id="playlist" controls>
-            <source src="media\Childish Gambino - Summertime Magic (Audio).mp3" type="audio/mpeg">
-            <source src="media\Sophie Ellis Bextor - Murder On The Dancefloor (Lyrics).mp3" type="audio/mpeg">
-            <source src="media\The Weeknd - I Feel It Coming ft. Daft Punk (Official Video).mp3" type="audio/mpeg">
-            <source src="media\Daft Punk - Instant Crush (Video) ft. Julian Casablancas.mp3" type="audio/mpeg">
-            <source src="media\Coldplay - Adventure Of A Lifetime (Official Video).mp3" type="audio/mpeg">
-            <source src="media\Coldplay - Hymn For The Weekend (Official Video).mp3" type="audio/mpeg">
-            <source src="media\Post Malone, Swae Lee - Sunflower (Spider-Man_ Into the Spider-Verse).mp3" type="audio/mpeg">
-            <source src="media\The Weeknd - Can't Feel My Face (Official Video).mp3" type="audio/mpeg">
-            <source src="media\Gorillaz - Feel Good Inc. (Official Video).mp3" type="audio/mpeg">
-            <source src="media\Daft Punk - One More Time (Official Video).mp3" type="audio/mpeg">
-            <source src="media\The Black Eyed Peas - Pump It (Official Music Video).mp3" type="audio/mpeg">
-            <source src="media\The Black Eyed Peas - Imma Be (Official Music Video).mp3" type="audio/mpeg">
-            <source src="media\The Black Eyed Peas - I Gotta Feeling (Official Music Video).mp3" type="audio/mpeg">
-            <source src="media\Bohemian Rhapsody  Muppet Music Video  The Muppets.mp3" type="audio/mpeg">
-            <source src="media\Ratatouille - Le Festin.mp3" type="audio/mpeg">
-            <source src="media\Michael Jackson - Smooth Criminal (Single Version) HD.mp3" type="audio/mpeg">
-            <source src="media\Michael Jackson - Beat It (Official 4K Video).mp3" type="audio/mpeg">
-            <source src="media\Childish Gambino - Redbone (Official Audio).mp3" type="audio/mpeg">
-            <source src="media\Passionfruit.mp3" type="audio/mpeg">
-            <source src="media\Teenage Fever.mp3" type="audio/mpeg">
-            <source src="media\Kanye West - Stronger.mp3" type="audio/mpeg">
-            <source src="media\Frank Ocean - Pink  White.mp3" type="audio/mpeg">
-            <source src="media\XXXTENTACION - Jocelyn Flores (Audio).mp3" type="audio/mpeg">
-            <source src="media\pink floyd - another brick in the wall.mp3" type="audio/mpeg">
-            <source src="media\Aerosmith - Dream On (Audio).mp3" type="audio/mpeg">
-            <source src="media\Hotel California (2013 Remaster).mp3" type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Childish Gambino - Summertime Magic (Audio).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Sophie Ellis Bextor - Murder On The Dancefloor (Lyrics).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/The Weeknd - I Feel It Coming ft. Daft Punk (Official Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Daft Punk - Instant Crush (Video) ft. Julian Casablancas.mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Coldplay - Adventure Of A Lifetime (Official Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Coldplay - Hymn For The Weekend (Official Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Post Malone, Swae Lee - Sunflower (Spider-Man_ Into the Spider-Verse).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/The Weeknd - Can\'t Feel My Face (Official Video).mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Gorillaz - Feel Good Inc. (Official Video).mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Daft Punk - One More Time (Official Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/The Black Eyed Peas - Pump It (Official Music Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/The Black Eyed Peas - Imma Be (Official Music Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/The Black Eyed Peas - I Gotta Feeling (Official Music Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Bohemian Rhapsody  Muppet Music Video  The Muppets.mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Ratatouille - Le Festin.mp3') }}" type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Michael Jackson - Smooth Criminal (Single Version) HD.mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Michael Jackson - Beat It (Official 4K Video).mp3') }}"
+                type="audio/mpeg">
+            <source
+                src="{{ url_for('static', filename='music_media/Childish Gambino - Redbone (Official Audio).mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Passionfruit.mp3') }}" type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Teenage Fever.mp3') }}" type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Kanye West - Stronger.mp3') }}" type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Frank Ocean - Pink  White.mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/XXXTENTACION - Jocelyn Flores (Audio).mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/pink floyd - another brick in the wall.mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Aerosmith - Dream On (Audio).mp3') }}"
+                type="audio/mpeg">
+            <source src="{{ url_for('static', filename='music_media/Hotel California (2013 Remaster).mp3') }}"
+                type="audio/mpeg">
         </audio>
         <div class="music-controls">
-            <!--
-            <span id="play-btn" class="material-symbols-outlined">
-                play_arrow
-            </span>
-            <span id="pause-btn" class="material-symbols-outlined">
-                pause
-            </span>
-            -->
+
             <span id="skip-btn" class="material-symbols-outlined">
                 skip_next
             </span>
@@ -90,7 +121,7 @@
     <img class="image" data-index="0" data-status="inactive"
         src="https://upload.wikimedia.org/wikipedia/en/d/df/RedHotChiliPeppersCalifornication.jpg" />
     <img class="image" data-index="1" data-status="inactive"
-        src="media\lp-vinyl-record-lit-with-blue-red-colorful-neon-light_232693-405.jpg" />
+        src="{{ url_for('static', filename='music_media/lp-vinyl-record-lit-with-blue-red-colorful-neon-light_232693-405.jpg') }}" />
     <img class="image" data-index="2" data-status="inactive"
         src="https://upload.wikimedia.org/wikipedia/en/1/10/Childish_Gambino_-_Awaken%2C_My_Love%21.png" />
     <img class="image" data-index="3" data-status="inactive"
@@ -146,48 +177,8 @@
     <img class="image" data-index="8" data-status="inactive"
         src="https://i.pinimg.com/originals/23/b0/49/23b04937476db9ddb58d40b338a55663.jpg" />
 
-    <script>
-        const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 
-        // Add event listeners to all <a> elements inside <li> elements
-        document.querySelectorAll("li > a").forEach(link => {
-            // Initialize interval variable for each link
-            let interval = null;
-
-            // Add mouseover event listener to each link
-            link.addEventListener('mouseover', event => {
-                let iteration = 0;
-
-                // Clear any existing intervals to prevent multiple animations
-                clearInterval(interval);
-
-                // Start a new interval for the animation
-                interval = setInterval(() => {
-                    // Modify the text content of the link during each iteration
-                    event.target.innerText = event.target.innerText
-                        .split("")
-                        .map((letter, index) => {
-                            // Replace letters with corresponding letters from dataset value
-                            if (index < iteration) {
-                                return event.target.dataset.value[index];
-                            }
-
-                            // Randomly select letters if animation is still ongoing
-                            return letters[Math.floor(Math.random() * 26)];
-                        })
-                        .join("");
-
-                    // Stop the animation when all letters have been replaced
-                    if (iteration >= event.target.dataset.value.length) {
-                        clearInterval(interval);
-                    }
-
-                    // Increment the iteration counter for smoother animation
-                    iteration += 1 / 3;
-                }, 40);
-            });
-        });
-    </script>
+    <script src="{{ url_for('static', filename='js/hacked_text.js') }}"></script>
 
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
@@ -203,7 +194,7 @@
         }
     </script>
     <script>
-        const images = document.getElementsByClassName("image");
+        const music_media = document.getElementsByClassName("image");
 
         let globalIndex = 0,
             last = { x: 0, y: 0 };
@@ -224,8 +215,8 @@
 
         const handleOnMove = e => {
             if (distanceFromLast(e.clientX, e.clientY) > (window.innerWidth / 20)) {
-                const lead = images[globalIndex % images.length],
-                    tail = images[(globalIndex - 5) % images.length];
+                const lead = music_media[globalIndex % music_media.length],
+                    tail = music_media[(globalIndex - 5) % music_media.length];
 
                 activate(lead, e.clientX, e.clientY);
 
@@ -241,8 +232,6 @@
     </script>
     <script>
         var playlist = document.getElementById('playlist');
-        var playButton = document.getElementById('play-btn');
-        var pauseButton = document.getElementById('pause-btn');
         var skipButton = document.getElementById('skip-btn');
         var sources = Array.from(playlist.querySelectorAll('source'));
         var currentIndex = 0;
@@ -257,14 +246,8 @@
 
         playlist.addEventListener('ended', skipTrack);
 
-        playButton.addEventListener('click', function () {
-            playlist.play();
-        });
-
-        pauseButton.addEventListener('click', function () {
-            playlist.pause();
-        });
-
         skipButton.addEventListener('click', skipTrack);
     </script>
 </body>
+
+</html>
