--- a/templates/recipesindex.html
+++ b/templates/recipesindex.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" contents="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchen Chaos</title>
-    <link rel="stylesheet" href="recipesstyles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/recipesstyles.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -36,15 +36,17 @@
             -->
         </div>
         <div class="dropdown_menu">
-            <li><a href="tripindex.html" data-value="Itineraries">Itineraries</a></li>
-            <li><a href="musicindex.html" data-value="Music">Music</a></li>
-            <li><a href="hero" data-value="Workout">Workout</a></li>
+            <li><a href="/templates/tripindex.html" data-value="Itineraries">Itineraries</a></li>
+            <li><a href="/templates/musicindex.html" data-value="Music">Music</a></li>
+            <li><a href="/templates/gymindex.html" data-value="Workout">Workout</a></li>
             <li><a href="#hero" class="action_btn" data-value="Landing Page">Landing Page</a></li>
         </div>
 
     </header>
     <video autoplay loop muted class="background-video">
-        <source src="recipesmedia\Ainsley Harriotts Chilli Chive Song  The Power of 10p Cooks.mp4" type="video/mp4">
+        <source
+            src="{{ url_for('static', filename='recipesmedia/Ainsley Harriotts Chilli Chive Song  The Power of 10p Cooks.mp4') }}"
+            type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <main>
@@ -145,48 +147,7 @@
                     Service</a></span>
         </div>
     </main>
-    <script>
-        const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-
-        // Add event listeners to all <a> elements inside <li> elements
-        document.querySelectorAll("li > a").forEach(link => {
-            // Initialize interval variable for each link
-            let interval = null;
-
-            // Add mouseover event listener to each link
-            link.addEventListener('mouseover', event => {
-                let iteration = 0;
-
-                // Clear any existing intervals to prevent multiple animations
-                clearInterval(interval);
-
-                // Start a new interval for the animation
-                interval = setInterval(() => {
-                    // Modify the text content of the link during each iteration
-                    event.target.innerText = event.target.innerText
-                        .split("")
-                        .map((letter, index) => {
-                            // Replace letters with corresponding letters from dataset value
-                            if (index < iteration) {
-                                return event.target.dataset.value[index];
-                            }
-
-                            // Randomly select letters if animation is still ongoing
-                            return letters[Math.floor(Math.random() * 26)];
-                        })
-                        .join("");
-
-                    // Stop the animation when all letters have been replaced
-                    if (iteration >= event.target.dataset.value.length) {
-                        clearInterval(interval);
-                    }
-
-                    // Increment the iteration counter for smoother animation
-                    iteration += 1 / 3;
-                }, 40);
-            });
-        });
-    </script>
+    <script src="{{ url_for('static', filename='js/hacked_text.js') }}"></script>
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
@@ -201,7 +162,7 @@
         }
     </script>
 
-    <script src="scroll.js"></script>
+    <script src="{{ url_for('static', filename='js/scroll.js') }}"></script>
 </body>
 
 </html>
