--- a/templates/musicindex.html
+++ b/templates/musicindex.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="dropdown_menu">
-            <li><a href="tripindex.html" data-value="Itineraries">Itineraries</a></li>
+            <li><a href="/templates/tripindex.html" data-value="Itineraries">Itineraries</a></li>
             <li><a href="/templates/recipesindex.html" data-value="Cuisine">Cuisine</a></li>
             <li><a href="/templates/gymindex.html" data-value="Workout">Workout</a></li>
             <li><a href="#hero" class="action_btn" data-value="Landing Page">Landing Page</a></li>
